# dgx-spark-playbooks

./: README.md
nvidia/multi-agent-chatbot/assets/: .env.example  README.md  docker-compose-models.yml  docker-compose.yml  download_hf_models.sh  download_models.sh  download_ollama_models.sh  model_download.sh  ollama-entrypoint.sh
nvidia/multi-agent-chatbot/assets/backend/: README.md  agent.py  client.py  config.py  main.py  media_proxy.py  model_management.py  models.py  postgres_storage.py  prompts.py  pyproject.toml  utils.py  utils_media.py  vector_store.py  warmup.py
nvidia/multi-agent-chatbot/assets/backend/tests/: test_generated_media_pipeline.py  test_mcp_hub.py  test_media_blocking.py
nvidia/multi-agent-chatbot/assets/backend/tools/: mcp_hub.py  media_generation.py  self_tooling_manager.py
nvidia/multi-agent-chatbot/assets/backend/tools/mcp_hub/: __init__.py  config.py  hub.py  tool_errors.py  utils.py
nvidia/multi-agent-chatbot/assets/backend/tools/mcp_hub/spokes/: __init__.py  code_spoke.py  flux_spoke.py  image_understanding_spoke.py  ministral_spoke.py  rag_spoke.py  self_tooling_spoke.py  tavily_spoke.py  wan_spoke.py
nvidia/multi-agent-chatbot/assets/backend/tools/mcp_servers/: code_generation.py  flux_image_generation.py  image_understanding.py  rag.py  self_tooling.py  tavily_search.py  test_tavily_search.py  wan_video_generation.py
nvidia/multi-agent-chatbot/assets/flux-service/: Dockerfile  download_models.sh  flux_trt_engine.py  main.py  preflight.py  requirements.txt
nvidia/multi-agent-chatbot/docs/: ARCHITECTURE.md
(+31 files in other folders)
