[project]
name = "backend"
version = "0.1.0"
description = "Backend API server for chatbot application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.14",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "langchain-unstructured>=0.1.6",
    "huggingface-hub>=0.27.0",
    "langgraph>=0.6.0",
    "mcp>=0.1.0",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "asyncpg>=0.29.0",
    "pillow>=11.0.0",
    "requests>=2.28.0",
    "neo4j>=5.25.0",
    "unstructured[pdf]>=0.18.11",
    "opencv-python-headless>=4.10.0.84",
    "diffusers[onnx]>=0.32.0",
    "onnxruntime>=1.19.2",
    "numpy>=1.24",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
